--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   },
   "dependencies": {
     "apify": "^3.4.5",
-    "crawlee": "^3.14.1",
+    "crawlee": "^3.15.3",
     "cheerio": "^1.0.0-rc.12",
-    "got-scraping": "^4.0.3"
+    "got-scraping": "^4.1.2",
+    "header-generator": "^2.1.27"
   }
 }
