--- a/package.json
+++ b/package.json
@@ -1,16 +1,30 @@
 {
   "name": "careerbuilder-jobs-scraper",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Scrapes jobs from CareerBuilder.com.",
   "type": "module",
-  "scripts": {
-    "start": "node src/main.js"
-  },
   "dependencies": {
     "apify": "^3.4.5",
     "crawlee": "^3.15.3",
+    "playwright": "1.54.1",
     "cheerio": "^1.0.0-rc.12",
-    "got-scraping": "^4.1.2",
-    "header-generator": "^2.1.27"
-  }
+    "got-scraping": "^4.1.2"
+  },
+  "devDependencies": {
+    "@apify/eslint-config": "^1.0.0",
+    "eslint": "^9.29.0",
+    "eslint-config-prettier": "^10.1.5",
+    "prettier": "^3.5.3"
+  },
+  "scripts": {
+    "start": "node src/main.js",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "lint": "eslint",
+    "lint:fix": "eslint --fix",
+    "test": "echo \"Error: oops, the Actor has no tests yet, sad!\" && exit 1",
+    "postinstall": "npx crawlee install-playwright-browsers"
+  },
+  "author": "Shahid",
+  "license": "ISC"
 }
