--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "Scrapes jobs from CareerBuilder.com.",
   "type": "module",
   "dependencies": {
-    "apify": "^3.4.5",
+    "apify": "^3.5.2",
     "crawlee": "^3.15.3",
-    "playwright": "1.54.1",
+    "camoufox-js": "^0.7.0",
+    "playwright": "1.56.1",
     "cheerio": "^1.0.0-rc.12",
     "got-scraping": "^4.1.2"
   },
