--- a/package.json
+++ b/package.json
@@ -1,29 +1,22 @@
 {
   "name": "careerbuilder-jobs-scraper",
-  "version": "2.0.0",
-  "description": "Scrapes jobs from CareerBuilder.com.",
+  "version": "3.0.0",
+  "description": "Scrapes jobs from CareerBuilder.com with stealth Firefox.",
   "type": "module",
   "dependencies": {
     "apify": "^3.5.2",
     "crawlee": "^3.15.3",
-    "camoufox-js": "^0.7.0",
     "playwright": "1.56.1",
-    "cheerio": "^1.0.0-rc.12",
-    "got-scraping": "^4.1.2"
+    "cheerio": "^1.0.0-rc.12"
   },
   "devDependencies": {
     "@apify/eslint-config": "^1.0.0",
     "eslint": "^9.29.0",
-    "eslint-config-prettier": "^10.1.5",
     "prettier": "^3.5.3"
   },
   "scripts": {
     "start": "node src/main.js",
-    "format": "prettier --write .",
-    "format:check": "prettier --check .",
-    "lint": "eslint",
-    "lint:fix": "eslint --fix",
-    "test": "echo \"Error: oops, the Actor has no tests yet, sad!\" && exit 1",
+    "test": "echo \"No tests yet\" && exit 0",
     "postinstall": "npx crawlee install-playwright-browsers"
   },
   "author": "Shahid",
