--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "apify": "^3.5.2",
     "crawlee": "^3.15.3",
+    "camoufox-js": "^0.7.0",
     "playwright": "1.56.1",
     "cheerio": "^1.0.0-rc.12"
   },
